# PyDetective

./: .gitignore  README.md  __main__.py  __main__old.py  main.py  pydetective.py  requirements.txt  setup.sh  sth.py
config/: falco.yaml  filters.py  pydetective.yaml
config/falco_config/: engine-kind-falcoctl.yaml
rules/dynamic_rules/: custom_falco_rules.yaml  extended_falco_rules.yaml  falco_rules.yaml  falco_rules.yamls
rules/static_rules/: custom_static_rules.yara  default_static_rules.yara  extended_static_rules.yara  pwd.yar
sandbox/: Dockerfile  executor.py
sandbox/sample_malicious_package/: pyproject.toml  setup.py
sandbox/sample_malicious_package/src/: __init__.py  malicious.py
sandbox/sample_malicious_package/src/sample_malicious_package/: __init__.py  malicious.py
src/: analysis.py  containers.py  evaluation.py  profile.py  runner.py  scanning.py
src/analysis/: falco.py  parser.py
src/analysis/config.d/: engine-kind-falcoctl.yaml
src/network/: tcpdump.py
src/sandbox/: Dockerfile  sandbox.py
src/sandbox/sample_package_skuty/: pyproject.toml  setup.py
src/sandbox/sample_package_skuty/src/: __init__.py
src/syscalls/: sysdig.py
src/tcpdump/: Dockerfile
src/utils/: helpers.py  runner.py
tcpdump/: Dockerfile
test/: malicious_list.txt  popular_list.txt
test/malicious_set/etheruim-1.0.0/: setup.py
test_container/: main.py
test_reports/: sample_malicious_package_report.html  sample_malicious_package_report.json
